<ScrollView 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background6"
    >

    
 
<RelativeLayout
    android:id="@+id/mylayout"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context=".Activities.LoginActivity"
    android:layout_gravity="center"
    >


    <EditText
        android:id="@+id/txt_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textCapWords"
        android:singleLine="true"
        android:padding="10dp"
        android:hint="@string/username_hint"
        android:background="@color/Login_ET_Background"
        android:layout_below="@+id/imageView1"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/txt_pass_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:singleLine="true"
        android:padding="10dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:background="@color/Login_ET_Background"
        android:layout_alignLeft="@+id/txt_user_name"
        android:layout_below="@+id/txt_user_name"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="0dp" />

    <EditText
        android:id="@+id/txt_ip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:singleLine="true"
        android:padding="10dp"
        android:inputType="phone"
        android:background="@color/Login_ET_Background"
        android:hint="@string/ip_hint"
        android:layout_alignLeft="@+id/txt_pass_word"
        android:layout_below="@+id/txt_pass_word"
        android:layout_marginTop="20dp" />

    

    <Button
        android:id="@+id/login_id"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkBox_keeplogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/login_button"
        android:background="@drawable/buttondes"
        />

    <CheckBox
        android:id="@+id/checkBox_rememberme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txt_ip"
        android:layout_below="@+id/txt_ip"
        android:text="@string/checkbox"
        android:textColor="@color/Login_ET_Background"
        android:checked="false"
        android:layout_marginTop="20dp" />

    <CheckBox
        android:id="@+id/checkBox_keeplogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txt_ip"
        android:layout_below="@+id/checkBox_rememberme"
        android:text="Keep me Login"
        android:textColor="@color/Login_ET_Background"
        android:checked="false" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="180sp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo"
        android:background="#b2ffffff" />

</RelativeLayout>
</ScrollView>