<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background10">

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/space2"
        android:visibility="visible" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/space"
        android:visibility="visible" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Eva_filter_FromDate"
        android:id="@+id/textView5"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:textStyle="bold"
        android:visibility="visible"
        android:textColor="#ffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Eva_filter_ToDate"
        android:id="@+id/textView6"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/space"
        android:layout_alignStart="@+id/space"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:visibility="visible"
        android:textColor="#ffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Eva_Filter_Role"
        android:id="@+id/textView7"
        android:layout_below="@+id/textView5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="30dp"
        android:textStyle="bold"
        android:visibility="visible"
        android:textColor="#ffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Eva_filter_Employee"
        android:id="@+id/textView8"
        android:layout_below="@+id/textView6"
        android:layout_alignLeft="@+id/space"
        android:layout_alignStart="@+id/space"
        android:layout_marginTop="5dp"
        android:textStyle="bold"
        android:visibility="visible"
        android:textColor="#ffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Eva_filter_Customer"
        android:id="@+id/textView9"
        android:layout_below="@+id/textView7"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="30dp"
        android:textStyle="bold"
        android:visibility="visible"
        android:textColor="#ffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Eva_filter_Project"
        android:id="@+id/textView10"
        android:layout_below="@+id/textView9"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="85dp"
        android:layout_marginLeft="30dp"
        android:textStyle="bold"
        android:visibility="visible"
        android:textColor="#ffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Eva_filter_Phase"
        android:id="@+id/textView11"
        android:layout_below="@+id/textView8"
        android:layout_alignLeft="@+id/space"
        android:layout_alignStart="@+id/space"
        android:layout_marginTop="85dp"
        android:textStyle="bold"
        android:visibility="visible"
        android:textColor="#ffffff" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/Eva_FromDate_EditTxt"
        android:layout_alignBottom="@+id/textView5"
        android:layout_toRightOf="@+id/textView5"
        android:layout_toEndOf="@+id/textView5"
        android:focusable="false"
        android:clickable="true"
        android:layout_marginLeft="25dp"
        android:visibility="visible" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/Eva_ToDate_EditTxt"
        android:layout_alignBottom="@+id/textView6"
        android:layout_toRightOf="@+id/textView6"
        android:layout_toEndOf="@+id/textView6"
        android:clickable="true"
        android:focusable="false"
        android:layout_marginLeft="30dp"
        android:visibility="visible" />

    <com.MainTelecom_Tablet.CustomClasses.InstantAutoComplete
        android:id="@+id/Eva_Employee_AutoFill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/Eva_hit2"
        android:minHeight="30dp"
        android:layout_alignRight="@+id/Eva_Employee_Contant"
        android:layout_alignEnd="@+id/Eva_Employee_Contant"
        android:layout_below="@+id/Eva_Employee_Contant"
        android:layout_alignLeft="@+id/Eva_Employee_Contant"
        android:layout_alignStart="@+id/Eva_Employee_Contant"
        android:visibility="visible" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Eva_Search_bt"
        android:id="@+id/button"
        android:layout_below="@+id/space2"
        android:layout_toLeftOf="@+id/space"
        android:layout_toStartOf="@+id/space"
        android:visibility="visible" />

    <com.MainTelecom_Tablet.CustomClasses.InstantAutoComplete
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Eva_Role_AutoFill"
        android:layout_alignBottom="@+id/textView7"
        android:layout_toRightOf="@+id/textView7"
        android:layout_marginLeft="75dp"
        android:layout_alignRight="@+id/Eva_FromDate_EditTxt"
        android:layout_alignEnd="@+id/Eva_FromDate_EditTxt"
        android:hint="@string/Eva_hit"
        android:visibility="visible" />

    <com.MainTelecom_Tablet.CustomClasses.InstantAutoComplete
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/Eva_hit"
        android:id="@+id/Eva_Project_AutoFill"
        android:layout_alignBottom="@+id/textView10"
        android:layout_toRightOf="@+id/textView10"
        android:layout_marginLeft="50dp"
        android:layout_alignRight="@+id/Eva_FromDate_EditTxt"
        android:layout_alignEnd="@+id/Eva_FromDate_EditTxt"
        android:visibility="visible" />

    <com.MainTelecom_Tablet.CustomClasses.InstantAutoComplete
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/Eva_hit"
        android:id="@+id/Eva_Phase_AutoFill"
        android:layout_alignBottom="@+id/textView11"
        android:layout_toRightOf="@+id/textView11"
        android:layout_marginLeft="50dp"
        android:layout_alignRight="@+id/Eva_ToDate_EditTxt"
        android:layout_alignEnd="@+id/Eva_ToDate_EditTxt"
        android:visibility="visible" />
    <com.doodle.android.chips.ChipsView
        android:id="@+id/Eva_Employee_Contant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:overScrollMode="never"
        app:cv_max_height="120dp"
        app:cv_vertical_spacing="2dp"
        android:layout_alignTop="@+id/textView8"
        android:layout_toRightOf="@+id/textView8"
        android:layout_marginLeft="12dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:visibility="visible" />

    <com.doodle.android.chips.ChipsView
        android:id="@+id/Eva_Customer_Contant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:overScrollMode="never"
        app:cv_max_height="120dp"
        app:cv_vertical_spacing="2dp"
        android:layout_alignTop="@+id/textView9"
        android:layout_toRightOf="@+id/textView9"
        android:layout_marginLeft="30dp"
        android:layout_alignRight="@+id/space"
        android:layout_alignEnd="@+id/space"
        android:visibility="visible" />

    <com.MainTelecom_Tablet.CustomClasses.InstantAutoComplete
        android:id="@+id/Eva_Customer_AutoFill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/Eva_hit2"
        android:minHeight="30dp"
        android:layout_alignRight="@+id/Eva_Customer_Contant"
        android:layout_alignEnd="@+id/Eva_Customer_Contant"
        android:layout_below="@+id/Eva_Customer_Contant"
        android:layout_alignLeft="@+id/Eva_Customer_Contant"
        android:layout_alignStart="@+id/Eva_Customer_Contant"
        android:visibility="visible" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Click To Filter Data"
        android:id="@+id/textView18"
        android:gravity="center"
        android:visibility="visible"
        android:textColor="#ffffff"
        android:background="@color/blue"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
