<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scroll1"
    android:background="@drawable/background4"
    android:contextClickable="false">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true">
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rbtGroup1"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ffffff"
            android:layout_marginTop="30dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="20dp">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/English_Lang"
                android:id="@+id/rbtEn"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:checked="true"
                 />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rbtAR"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/rbtEn"
                android:layout_toEndOf="@+id/rbtEn"
                android:text="@string/Arabic_Lang" />
        </RelativeLayout>
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/list_teamWFM"
        android:id="@+id/textView"
        android:layout_below="@+id/rbtGroup1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@android:drawable/bottom_bar"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:textAllCaps="false"
        android:gravity="center_vertical"
        android:textColor="#ffffff" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listView1"
        android:entries="@array/item_for_teamWFM_List"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:focusable="false"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/list_contact_center"
        android:id="@+id/textView2"
        android:layout_below="@+id/listView1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@android:drawable/bottom_bar"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center_vertical"
        android:textColor="#ffffff" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listView2"
        android:entries="@array/item_for_ContactCenter_List"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:focusable="false"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="mmm"
        android:id="@+id/textView3"
        android:layout_below="@+id/listView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@android:drawable/bottom_bar"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center_vertical"
        android:textColor="#ffffff" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listView3"
        android:entries="@array/item_for"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:focusable="false"
        android:animationCache="false"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/list_setting"
        android:id="@+id/textView4"
        android:layout_below="@+id/listView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@android:drawable/bottom_bar"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center_vertical"
        android:textColor="#ffffff" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/listView4"
        android:entries="@array/item_for_Setting"
        android:layout_below="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:focusable="false"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Help"
        android:id="@+id/Help_bt"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/rbtGroup1"
        android:layout_toEndOf="@+id/rbtGroup1"
        android:layout_marginTop="22dp" />
</RelativeLayout>
</ScrollView>